# algorithms

dynamic/apsp/src/: CMakeLists.txt  apsp.cpp
dynamic/apsp/test/: neg.txt  small.txt
dynamic/knapsack1/src/: CMakeLists.txt  knapsack1.cpp
dynamic/knapsack2/src/: CMakeLists.txt  knapsack2.cpp
dynamic/knapsack2/test/: small.txt
dynamic/optimal_bst/src/: CMakeLists.txt  optimal_bst.cpp
dynamic/optimal_bst/test/: small.txt
dynamic/tsp/src/: CMakeLists.txt  tsp.cpp
dynamic/tsp/test/: big_sets  s2.txt  sol.txt  x.txt  y.txt
greedy/clustering1/src/: CMakeLists.txt  clustering1.cpp
greedy/clustering1/test/: small.txt
greedy/clustering_big/src/: CMakeLists.txt  clustering_big.cpp
greedy/clustering_big/test/: readme
greedy/mst_prim/src/: CMakeLists.txt  mst_prim.cpp
greedy/mst_prim/test/: small.txt  small_2.txt
greedy/scheduler/src/: CMakeLists.txt  scheduler.cpp
